@@ -43,13 +43,6 @@ FLAGS="$FLAGS -Djava.net.preferIPv4Stack=true"
 ## Delay asking backup for GET in Infinispan:
 FLAGS="$FLAGS -Dinfinispan.stagger.delay=5000"
 
-
-## Radargun JVM options (comment the above -Xms/-Xmx)
-#FLAGS="$FLAGS -Xms16g -Xmx16g -XX:+UseLargePages -XX:+UseG1GC -XX:MaxGCPauseMillis=300 -XX:InitiatingHeapOccupancyPercent=70"
-
-#FLAGS="$FLAGS -verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:gc-perf09.log -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCCause"
-
-
 ## good flags: 112'000 reads/node ispn on edg-perf01-08
 # FLAGS="$FLAGS -XX:TLABSize=300k -XX:-ResizeTLAB"
 # FLAGS="$FLAGS -XX:+UseParallelGC -XX:GCTimeRatio=99"
